tdf#152094 don't attempt scroll paint optimization for devices with a mapmode

Change-Id: I446cf9ee62faf564143d25db60643c9b6cd8e3d9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143188
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>